--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,19 +1,23 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+@mixin flexCenter {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  @include flexCenter;
+}
 
 .main {
   padding: 5rem 0;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include flexCenter;
+}
+.message {
+  padding: 0.5rem 0;
+  @include flexCenter;
 }
 
 .diamondsweeperBoard {
