--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -20,17 +20,21 @@
   @include flexCenter;
 }
 
-.diamondsweeperBoard {
-  td {
-    padding: 0;
-    border: 1px solid black;
-  }
+.gridContainer {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto; 
+}
+.gridItem {
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  height: 50px;
+  width: 50px;
 }
 
 .cell {
   height: 50px;
   width: 50px;
   background-size: 50px 50px;
+  margin: 0;
 
   &.diamond {
     background-image: url(../../assets/diamond.png);
