added hint logic

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -42,6 +42,9 @@
 
   &.arrow {
     background-image: url(../../assets/arrow.png);
+    &.left {
+      transform: rotate(180deg);
+    }
   }
 
   &.unknown {
