--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -6,19 +6,11 @@
 }
 .container {
   @include flexCenter;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
 }
 
 .message {
   @include flexCenter;
   padding: 1rem 0;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   background-color: #777777;
   color: #ffffff;
@@ -35,11 +27,14 @@
 
 .gridContainer {
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
   width: 85vw;
   height: 85vw;
   max-width: 648px;
   max-height: 648px;
+  padding: 4rem 0;
+  flex-shrink: 0;
 }
 .gridItem {
   border: 1px solid rgba(0, 0, 0, 0.8);
